Fixed dates scroller, adding new list works. Adding new context still buggy.

--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -59,7 +59,7 @@
               </section>
             </div>
           </div>
-          <div class="swiper-slide" swiper-slide="tasks/lists/uncategorized" slide-index="lists.length + contexts.length + 1" ng-init="subtask = {}">
+          <div class="swiper-slide" swiper-slide="tasks/lists/uncategorized" slide-index="lists.length + contexts.length" ng-init="subtask = {}">
             <div class="inner-page-content-container">
               <section>
                 <h3>uncategorized</h3>              
