--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -13,49 +13,49 @@
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[0].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[0])">
                 <span>{{visibleDateFormat(dates[0])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[0])}">{{dates[0].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[1].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[1])">
                 <span>{{visibleDateFormat(dates[1])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[1])}">{{dates[1].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[2].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[2])">
                 <span>{{visibleDateFormat(dates[2])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[2])}">{{dates[2].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[3].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[3])">
                 <span>{{visibleDateFormat(dates[3])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[3])}">{{dates[3].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[4].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[4])">
                 <span>{{visibleDateFormat(dates[4])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[4])}">{{dates[4].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[5].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[5])">
                 <span>{{visibleDateFormat(dates[5])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[5])}">{{dates[5].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[6].yyyymmdd)">
+              <a href ng-click="dateClicked(dates[6])">
                 <span>{{visibleDateFormat(dates[6])}}</span><br>
                 <span ng-class="{activeDay: isDayActive(dates[6])}">{{dates[6].date}}</span>
               </a>
