--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -1,7 +1,16 @@
 <div id="menu-content" class="swiper-no-swiping" ng-controller="MenuController">
   <ul>
     <li>
-      <a href ng-click="setMyActive()" class="active">home</a>
+      <a href ng-click="gotoInbox()" ng-class="getFeatureClass('inbox')">inbox</a>
+    </li>
+    <li>
+      <a href ng-click="gotoTasks()" ng-class="getFeatureClass('tasks')">tasks</a>
+    </li>
+    <li>
+      <a href ng-click="gotoNotes()" ng-class="getFeatureClass('notes')">notes</a>
+    </li>
+    <li ng-show="useCollectives()">
+      <a href ng-click="setMyActive()" class="active">my data</a>
     </li>
     <li ng-show="useCollectives()">
       <span>collectives</span>
