--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,21 +1,23 @@
-<section id="inbox" class="two-column-grid page" ng-controller="ItemsController">
-  <div class="column">
-    <header class="page-header" ng-init="heading='inbox'" ng-include="'static/app/base/pageHeader.html'"></header>
-    <div id="inbox-page-content-container" class="content-container page-content-container">
-      <div class="accordion-wrapper">
-        <div class="inner-page-content-container" accordion>
-          <div ng-repeat="item in items | orderBy:'modified':true">
-            <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
-            <div class="accordion-body" ng-if="isOpen(item)">
-              <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" ng-show="isSnapVisible" id="drawer" class="snap-drawer snap-drawer-left" scrollable></div>
+<div class="no-slides-container" ng-init="feature='inbox'" ng-controller="MainController" snap-directive>
+  <section id="inbox" class="two-column-grid page" ng-controller="ItemsController">
+    <div class="column">
+      <header class="page-header" ng-init="heading='inbox'" ng-include="'static/app/base/pageHeader.html'"></header>
+      <div id="inbox-page-content-container" class="content-container page-content-container">
+        <div class="accordion-wrapper">
+          <div class="inner-page-content-container" accordion>
+            <div ng-repeat="item in items | orderBy:'modified':true">
+              <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
+              <div class="accordion-body" ng-if="isOpen(item)">
+                <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <aside class="column">
-    TODO
-  </aside>
-
-</section>
+    <aside class="column">
+      TODO
+    </aside>
+  </section>
+</div>
