--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -71,9 +71,9 @@
           </ul>
         </nav>
       </div>
-      <div class="swiper-container vertical-slides" swiper-container="tasks/dates" swiper-type="page" expected-slides="dates.length">
+      <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="dates.length">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/dates/{{date.weekday}}" slide-index="$index" ng-init="subtask = {date: date.yyyymmdd}">
+          <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = {date: date.yyyymmdd}">
             <div class="inner-slide-content-container">
               <section id="date" class="date">
                 <h3>{{date.displayDate}}</h3>
