--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -72,7 +72,7 @@
         </nav>
       </div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="dates.length">
-        <div class="swiper-wrapper">
+        <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
           <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = {date: date.yyyymmdd}">
             <div class="inner-slide-content-container">
               <section id="date" class="date">
