--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -3,7 +3,7 @@
     <header class="page-header" ng-init="heading='details'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div class="content-container page-content-container">
       <div class="swiper-container vertical-slides" swiper-container="tasks/details" swiper-type="page" expected-slides="count = lists.length + contexts.length + 1">
-        <div class="swiper-wrapper">
+        <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/details/{{list.uuid}}" slide-index="$index" ng-init="subtask = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
               <section class="list" ng-controller="ListsController">
