--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -2,7 +2,7 @@
 <div class="slides-container" ng-init="feature='tasks'" ng-controller="MainController" snap-directive>
   <!-- TODO: use ng-if with expected-slides="tasks.length > 0 && 6 || 2" -->
   <div class="swiper-container main-slides" swiper-container="tasks" swiper-type="main" expected-slides="3">
-    <div class="swiper-wrapper" ng-class="noSwiping">
+    <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
       <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/dates.html'"></div>
       <div class="swiper-slide" swiper-slide="tasks/overview" slide-index=1 ng-include="'static/app/tasks/overview.html'"></div>
       <div class="swiper-slide" swiper-slide="tasks/details" slide-index=2 ng-include="'static/app/tasks/details.html'"></div>
