--- a/frontend/core/src/main/webapp/static/app/base/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/base/pageHeader.html
@@ -9,7 +9,7 @@
       <div ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>
     </div>
     <div class="center-of-three" id="page-heading" ng-click="showOmnibar()"><h3>{{heading}}<span class="offline-indicator" ng-if="!online">*</span></h3></div>
-    <div class="right-of-three" id="add-new-button">
+    <div class="right-of-three swiper-no-swiping" id="add-new-button">
       <button type="button" class="button" ng-click="addNew()">
         <span class="icon-plus"></span>
       </button>
