--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -2,75 +2,7 @@
   <div class="column" ng-controller="TasksController">
     <header id="tasks-dates-header" class="page-header" ng-init="heading='dates'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-dates-page-content-container" class="content-container page-content-container">
-      <div class="swiper-no-swiping" id="date-picker">
-        <nav role="navigation" id="datepicker">
-          <ul class="horizontally-justified">
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="previousWeek()">
-                <span class="icon-arrow-left"></span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[0])">
-                <span>{{visibleDateFormat(dates[0])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[0])}">{{dates[0].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[1])">
-                <span>{{visibleDateFormat(dates[1])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[1])}">{{dates[1].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[2])">
-                <span>{{visibleDateFormat(dates[2])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[2])}">{{dates[2].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[3])">
-                <span>{{visibleDateFormat(dates[3])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[3])}">{{dates[3].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[4])">
-                <span>{{visibleDateFormat(dates[4])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[4])}">{{dates[4].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[5])">
-                <span>{{visibleDateFormat(dates[5])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[5])}">{{dates[5].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="dateClicked(dates[6])">
-                <span>{{visibleDateFormat(dates[6])}}</span><br>
-                <span ng-class="{activeDay: isDayActive(dates[6])}">{{dates[6].date}}</span>
-              </a>
-            </li>
-
-            <li class="justified-element datepicker-date">
-              <a href ng-click="nextWeek()">
-                <span class="icon-arrow-right"></span>
-              </a>
-            </li>
-            
-            <li id="stretch"></li>
-          </ul>
-        </nav>
-      </div>
+      <div ng-include="'static/app/tasks/datePicker.html'" include-replace></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="dates.length">
         <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
           <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = {date: date.yyyymmdd}">
