Show/hide datepicker vs date heading.

--- a/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
@@ -1,5 +1,5 @@
-<div class="swiper-no-swiping" id="date-picker">
-  <nav role="navigation" id="datepicker">
+<div id="datepicker">
+  <nav role="navigation">
     <ul class="horizontally-justified">
 
       <li class="justified-element datepicker-date">
