Somewhat working fixed header

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -37,6 +37,7 @@
     <script src="static/common/UUIDService.js"></script>
     <script src="static/common/clickElsewhereDirective.js"></script>
     <script src="static/common/dateTodayDirective.js"></script>
+    <script src="static/common/dynamicPlaceholderDirective.js"></script>
     <script src="static/common/includeReplaceDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
     <script src="static/common/swiper.js"></script>
