--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -1,4 +1,4 @@
-<nav class="{{feature}}-footer swiper-no-swiping" role="navigation" ng-controller="NavbarController">
+<nav id="{{feature}}-footer" class="swiper-no-swiping" role="navigation" ng-controller="NavbarController">
   <ul class="horizontally-justified">
     <li id="home-link" class="justified-element">
       <a href ng-click="gotoHome()" ng-class="isActiveSlide('home') && 'active-slide'">
