--- a/frontend/core/src/main/webapp/static/app/main/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageHeader.html
@@ -1,6 +1,6 @@
-<nav class="swiper-no-swiping" id="page-header" role="navigation" ng-controller="HeaderController" ng-switch="omniBarVisible">
-  <div ng-switch-when="false">
-    <div class="left-of-three" id="menu">
+<nav id="{{feature}}-footer" class="swiper-no-swiping" role="navigation" ng-controller="HeaderController">
+  <div ng-if="!omnibarVisible">
+    <div class="left-of-three" id="menu" ng-style="{width: currentWidth * 0.5 - 100}">
       <div id="menu-icon">
         <button id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
           <span class="icon-menu"></span>
@@ -8,28 +8,14 @@
       </div>
       <div ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>
     </div>
-    <div class="center-of-three" id="page-heading" ng-click="showOmnibar()"><h3>{{heading}}<span class="offline-indicator" ng-if="!online">*</span></h3></div>
-    <div class="right-of-three swiper-no-swiping" id="add-new-button">
+    <div class="center-of-three" id="page-heading"></div>
+    <div class="right-of-three swiper-no-swiping" id="add-new-button" ng-style="{width: currentWidth * 0.5 - 100}">
       <button type="button" class="button" ng-click="addNew()">
         <span class="icon-plus"></span>
       </button>
     </div>
   </div>
-  <div ng-switch-when="true" class="swiper-no-swiping">
-    <form id="omnibar" role="form" name="addOmniItem" ng-submit="saveOmnibarText(omnibarText)">
-      <div class="form-group">
-        <div class="left-input-wrapper">
-          <label class="sr-only" for="omniItem">omniItem</label>
-          <input type="text" ng-focus="omniBarFocus(true)" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" placeholder="store / recall..." required>
-        </div>
-        <div class="right-button-wrapper">
-          <button id="omnibarPlus" class="button" type="button" ng-click="saveOmnibarText(omnibarText)"><span class="icon-plus"></span>
-          </button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div id="omnibar-search-results" ng-if="omniBarVisible && omnibarText.title.length > 0" id="filtered-items-container"> 
+  <div id="omnibar-search-results" ng-if="omnibarVisible && omnibarText.title.length > 0" id="filtered-items-container"> 
     <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
       <h3 ><a href ng-click="gotoInbox()" class="page-header">inbox</a></h3>
       <div class="inner-page-content-container" accordion>
