--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -1,6 +1,6 @@
 <section id="tasks-details" class="two-column-grid page" ng-controller="TasksController">
   <div class="column">
-    <header class="page-header" ng-init="heading='details'" ng-include="'static/app/base/pageHeader.html'"></header>
+    <div class="page-heading swiper-no-swiping" ng-init="heading='details'" ng-include="'static/app/base/omnibar.html'"></div>
     <div class="content-container page-content-container">
       <div class="swiper-container vertical-slides" swiper-container="tasks/details" swiper-type="page" expected-slides="count = lists.length + contexts.length + 1">
         <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
