--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -1,6 +1,6 @@
 <section id="tasks-overview" class="two-column-grid page" ng-controller="TasksController">
   <div class="column">
-    <header class="page-header" ng-init="heading='overview'" ng-include="'static/app/base/pageHeader.html'"></header>
+    <div class="page-heading swiper-no-swiping" ng-init="heading='overview'" ng-include="'static/app/base/omnibar.html'"></div>
     <div class="content-container page-content-container">
       <div class="inner-page-content-container">
         <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
