--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -29,7 +29,7 @@
 
     <script src="static/lib/base64.js"></script>
     <script src="static/lib/expanding.js"></script>
-    <script src="static/lib/iscroll-lite.js"></script>
+    <script src="static/lib/iscroll.js"></script>
 
     <script src="static/common/common.js"></script>
     <script src="static/common/DateService.js"></script>
@@ -84,6 +84,7 @@
 
     <script src="static/app/tasks/TasksController.js"></script>
     <script src="static/app/tasks/DatesController.js"></script>
+    <script src="static/app/tasks/datepickerDirective.js"></script>
     <script src="static/app/tasks/TasksService.js"></script>
     <script src="static/app/tasks/TasksSlidesService.js"></script>
     <script src="static/app/tasks/tasksFilter.js"></script>
