--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -2,15 +2,18 @@
   <div class="column" ng-controller="TasksController">
     <header id="tasks-dates-header" class="page-header" ng-init="heading='dates'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-dates-page-content-container" class="content-container page-content-container">
-      <div ng-if="isDatepickerVisible" class="swiper-no-swiping" ng-include="'static/app/tasks/datepicker.html'" include-replace></div>
+      <div ng-if="isDatepickerVisible" ng-include="'static/app/tasks/datepicker.html'" include-replace></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="dates.length">
         <div class="swiper-wrapper" ng-class="getNoSwipingClass()">
+        <!-- repeat weekday in weekdays -->
           <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = {date: date.yyyymmdd}">
+          <!-- init DatesController.getSubtask -->
             <div class="inner-slide-content-container">
               <section id="date" class="date">
                 <h3 class="date-heading" ng-if="!isDatepickerVisible" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
                 <div>
                   <div class="inner-page-content-container" accordion>
+                  <!-- filter weekday, activeWeek -->
                     <div ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div class="accordion-body" ng-if="isOpen(task)">
